--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -21,6 +21,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
     <!-- Theme Config -->
+    <script src="assets/js/theme.js"></script>
 </head>
 
 <body class="bg-[#0a0f1e] text-white font-display antialiased">
@@ -117,4 +118,3 @@
 </body>
 
 </html>
-
