--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark only">
-    <script>
-        // FORCE DARK MODE
-        document.documentElement.classList.add('dark');
-        document.documentElement.classList.remove('light');
-    </script>
+    <script src="assets/js/theme.js"></script>
     <meta name="theme-color" content="#0a0f1e">
     <title>Area Privata - Dashboard</title>
     <!-- PWA / Mobile Capable -->
@@ -272,8 +268,8 @@
                         class="absolute top-0 left-0 w-full h-24 bg-gradient-to-b from-white/5 to-transparent pointer-events-none">
                     </div>
 
-                    <div class="relative z-20 w-full flex items-center justify-between px-5 py-4 border-b border-white/5 cursor-pointer group hover:bg-white/5 transition-colors"
-                        onclick="toggleRubrica()">
+                    <div id="rubrica-toggle-btn"
+                        class="relative z-20 w-full flex items-center justify-between px-5 py-4 border-b border-white/5 cursor-pointer group hover:bg-white/5 transition-colors">
                         <div class="flex items-center gap-3 flex-1 relative z-10">
                             <span class="material-symbols-outlined text-purple-400 text-xl">contacts</span>
                             <div class="flex items-center gap-2">
@@ -283,7 +279,7 @@
                             </div>
                         </div>
                         <div class="flex items-center gap-3">
-                            <button onclick="event.stopPropagation(); toggleAddContactForm()"
+                            <button id="add-contact-btn"
                                 class="flex items-center gap-1.5 text-primary-light hover:text-white px-3 py-1.5 rounded-xl text-[10px] font-bold border border-white/10 bg-white/5 hover:bg-primary transition-all active:scale-95 saetta">
                                 <span class="material-symbols-outlined text-sm">add</span>
                                 NUOVO
