--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -3,17 +3,8 @@
 
 <head>
     <!-- Instant Theme Loader (Must be in HEAD) -->
-    <script>
-        (function () {
-            const savedTheme = localStorage.getItem('theme');
-            const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-            if (savedTheme === 'dark' || (!savedTheme && systemDark)) {
-                document.documentElement.classList.add('dark');
-            } else {
-                document.documentElement.classList.remove('dark');
-            }
-        })();
-    </script>
+    <!-- Theme Loader -->
+    <script src="assets/js/theme.js"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta name="color-scheme" content="dark only">
@@ -179,8 +170,7 @@
                     class="bg-primary hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors">
                     Reinvia email di verifica
                 </button>
-                <button id="close-modal"
-                    class="ml-2 text-gray-500 hover:text-gray-700  ">
+                <button id="close-modal" class="ml-2 text-gray-500 hover:text-gray-700  ">
                     Chiudi
                 </button>
             </div>
@@ -195,7 +185,6 @@
             if (registerForm) {
                 registerForm.addEventListener('submit', async (event) => {
                     event.preventDefault();
-                    console.log("Form submitted"); // Debug log
 
                     const submitBtn = registerForm.querySelector('button[type="submit"]');
                     const originalBtnText = submitBtn.innerHTML;
@@ -207,7 +196,6 @@
                     const email = document.getElementById('email').value;
                     const password = document.getElementById('password').value;
 
-                    console.log("Calling register function..."); // Debug log
                     const success = await register(nome, cognome, email, password);
 
                     submitBtn.disabled = false;
@@ -242,4 +230,3 @@
 </body>
 
 </html>
-
