--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -21,13 +21,10 @@
         <div id="header-placeholder"></div>
 
         <!-- MAIN -->
-        <main class="titanium-main">
+        <main class="titanium-main no-select">
 
             <div class="saetta-master"></div>
 
-            <p class="hero-notice">
-                Versione 4.5 - Versione con cellulare funzionante (Blindata)
-            </p>
 
             <div class="dashboard-grid">
                 <!-- SEZIONE 1: ACCESSO RAPIDO -->
