--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -25,6 +25,20 @@
         body {
             background-color: #e2e8f0;
         }
+
+        /* BLOCCO INTERAZIONI NON DESIDERATE (UX NATIVA) */
+        .no-select {
+            -webkit-user-select: none;
+            -webkit-touch-callout: none;
+            user-select: none;
+        }
+
+        .no-select input,
+        .no-select textarea,
+        .no-select [contenteditable="true"] {
+            -webkit-user-select: text;
+            user-select: text;
+        }
     </style>
 </head>
 
@@ -66,7 +80,7 @@
         <!-- Header Spacer -->
         <div class="h-16 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
+        <main class="flex-1 overflow-y-auto no-scrollbar mb-24 no-select">
             <!-- Search Bar -->
             <div class="px-4 pt-4 pb-2">
                 <div class="relative">
