--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -133,6 +133,20 @@
             text-transform: uppercase;
             letter-spacing: 0.05em;
         }
+
+        /* BLOCCO INTERAZIONI NON DESIDERATE (UX NATIVA) */
+        .no-select {
+            -webkit-user-select: none;
+            -webkit-touch-callout: none;
+            user-select: none;
+        }
+
+        .no-select input,
+        .no-select textarea,
+        .no-select [contenteditable="true"] {
+            -webkit-user-select: text;
+            user-select: text;
+        }
     </style>
 </head>
 
@@ -176,7 +190,7 @@
         <!-- Header Spacer -->
         <div class="h-20 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
+        <main class="flex-1 overflow-y-auto no-scrollbar mb-24 no-select">
             <div class="px-6 py-4">
                 <!-- 6) SEARCH SECTION (Titanium Glass Section Box) -->
                 <div class="relative mb-6">
