Fix: Configurazione PWA (Icona e Nome App) per home screen

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -11,6 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/titanium.css?v=2">
+
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="App Codici">
+    <meta name="theme-color" content="#0a0f1e">
 </head>
 
 <body>
