--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -12,9 +12,11 @@
     <meta name="theme-color" content="#0a0f1e">
     <title>Codici & Password - Accedi</title>
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/assets/images/app-icon.png?v=2">
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="App Codici">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
