--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html class="dark" lang="it">
+<html class="titanium-forced-dark dark" lang="it">
 
 <head>
     <meta charset="utf-8" />
-    <script type="module">
-        import { applyTheme } from './assets/js/theme.js';
-        applyTheme();
-    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark only">
     <meta name="theme-color" content="#0a0f1e">
@@ -24,124 +20,25 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/titanium.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <style>
-        /* ALLINEAMENTO STANDARD AREA PRIVATA */
-        body {
-            background-color: #0a0f1e;
-            /* Sfondo pieno come Area Privata */
-            min-height: 100vh;
-            margin: 0;
-            color: #ffffff;
-            font-family: 'Manrope', sans-serif;
-            overflow-x: hidden;
-        }
-
-        /* REGOLA 15 - FARO ANIMATO (Standard Area Privata) */
-        .glass-glow {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: 150%;
-            height: 120%;
-            background: radial-gradient(ellipse at 50% 0%, rgba(80, 150, 255, 0.6) 0%, rgba(80, 150, 255, 0.2) 25%, rgba(80, 150, 255, 0.05) 50%, transparent 75%);
-            filter: blur(80px);
-            pointer-events: none;
-            z-index: 0;
-            animation: glowFloat 4s ease-in-out infinite;
-        }
-
-        @keyframes glowFloat {
-            0% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-
-            50% {
-                transform: translateX(-50%) translateY(100px) scale(1.4);
-                opacity: 1;
-            }
-
-            100% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-        }
-
-        .border-glow {
-            position: relative;
-        }
-
-        .border-glow::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            border-radius: inherit;
-            padding: 1.5px;
-            background: linear-gradient(120deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.1) 40%, rgba(255, 255, 255, 0.1) 60%, rgba(255, 255, 255, 0.6) 100%);
-            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            -webkit-mask-composite: xor;
-            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            mask-composite: exclude;
-            pointer-events: none;
-            z-index: 20;
-        }
-
-        .saetta {
-            position: absolute;
-            inset: 0;
-            background: linear-gradient(110deg, transparent 40%, rgba(255, 255, 255, 0.08) 50%, transparent 60%);
-            background-size: 200% 100%;
-            pointer-events: none;
-            z-index: 5;
-            animation: shimmer 4s infinite linear;
-        }
-
-        @keyframes shimmer {
-            0% {
-                background-position: -200% 0;
-            }
-
-            100% {
-                background-position: 200% 0;
-            }
-        }
-
-        /* BLOCCO INTERAZIONI NON DESIDERATE (UX NATIVA) */
-        .no-select {
-            -webkit-user-select: none;
-            -webkit-touch-callout: none;
-            user-select: none;
-        }
-
-        .no-select input,
-        .no-select textarea,
-        .no-select [contenteditable="true"] {
-            -webkit-user-select: text;
-            user-select: text;
-        }
-    </style>
 </head>
 
-<body class="bg-[#0a0f1e] antialiased">
-    <!-- 1. CONTENITORE PRINCIPALE (GRADIENTE METALLICO COME AREA PRIVATA) -->
-    <div
-        class="relative flex min-h-screen w-full flex-col md:max-w-3xl lg:max-w-5xl mx-auto shadow-2xl overflow-hidden bg-gradient-to-l from-[#030712] to-[#162e6e]">
+<body class="titanium-bg antialiased">
+    <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
+    <div class="titanium-box">
 
-        <!-- 2. FARO ANIMATO "VIVO" (Standard Area Privata - z-0) -->
+        <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
         <div class="glass-glow"></div>
 
-        <!-- Header Glass -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl bg-gradient-to-b from-[#0a0f1e] to-transparent backdrop-blur-md z-50">
-            <div class="flex items-center p-4 justify-center h-16">
-                <span class="text-white/40 font-bold tracking-widest text-xs uppercase select-none">Security
-                    Vault</span>
-            </div>
-        </header>
+        <!-- 4. HEADER PLACEHOLDER -->
+        <div id="header-placeholder"></div>
 
         <!-- Main Content -->
         <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
+
+            <!-- 6. SAETTA MASTER (Riflesso Metallico Totale) -->
+            <div class="saetta-master"></div>
 
             <!-- Login Card (Il Box Campi) -->
             <div
@@ -161,15 +58,20 @@
                             class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
                             <div class="saetta opacity-40"></div>
                             <span
-                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg select-none">security</span>
+                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
                     </div>
 
                     <h1
                         class="text-3xl font-extrabold text-white text-center mb-1 select-none group-hover:translate-x-1 transition-transform duration-500">
                         Accedi</h1>
-                    <p class="text-xs text-white/40 text-center mb-10 uppercase tracking-widest select-none font-bold">
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
                         Protocollo Titanium</p>
+
+                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA (Semantica Enterprise) -->
+                    <p data-ui="hint" class="mb-10">
+                        Inserisci le tue credenziali autorizzate per sbloccare l'accesso al sistema.
+                    </p>
 
                     <form id="login-form" class="space-y-6">
                         <div class="space-y-2">
@@ -193,7 +95,7 @@
                             </div>
                         </div>
 
-                        <button type="submit"
+                        <button type="submit" data-login-submit
                             class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
                             <div class="relative z-10 flex items-center justify-center gap-2">
                                 <span class="tracking-widest uppercase text-xs">Autenticazione</span>
@@ -204,58 +106,20 @@
 
                     <div class="mt-8 text-center select-none">
                         <a href="registrati.html"
-                            class="text-[10px] font-bold text-blue-400 hover:text-white transition-colors uppercase tracking-widest font-extrabold">Registra
-                            nuovo operatore</a>
+                            class="text-[10px] font-bold text-blue-400 hover:text-white transition-colors uppercase tracking-widest font-extrabold">Registrazione
+                            nuovo utente</a>
                     </div>
                 </div>
             </div>
         </main>
 
-        <!-- Footer Glass -->
-        <footer
-            class="fixed bottom-0 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl bg-gradient-to-t from-[#0a0f1e] to-transparent backdrop-blur-md z-50">
-            <div class="flex items-center p-4 justify-center h-16">
-                <p class="text-[10px] text-white/20 font-bold tracking-[0.4em] uppercase select-none">Security
-                    Protection System</p>
-            </div>
-        </footer>
+        <!-- 5. FOOTER PLACEHOLDER -->
+        <div id="footer-placeholder"></div>
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/utils.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script type="module">
-        import { login, checkAuthState } from './assets/js/auth.js';
-        checkAuthState();
-        document.addEventListener('DOMContentLoaded', () => {
-            const loginForm = document.getElementById('login-form');
-            if (loginForm) {
-                loginForm.addEventListener('submit', async (e) => {
-                    e.preventDefault();
-
-                    // iOS Zoom Fix
-                    const emailInput = document.getElementById('email');
-                    const passwordInput = document.getElementById('password');
-                    if (emailInput) emailInput.blur();
-                    if (passwordInput) passwordInput.blur();
-                    window.scrollTo(0, 0);
-
-                    const email = emailInput.value;
-                    const password = passwordInput.value;
-                    const btn = e.target.querySelector('button[type="submit"]');
-                    const original = btn.innerHTML;
-                    try {
-                        btn.disabled = true;
-                        btn.innerHTML = '<span class="animate-spin material-symbols-outlined">sync</span>';
-                        await login(email, password);
-                    } catch (err) {
-                        btn.disabled = false;
-                        btn.innerHTML = original;
-                    }
-                });
-            }
-        });
-    </script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/login.js"></script>
 </body>
 
 </html>
