--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -1,171 +1,142 @@
 <!DOCTYPE html>
-<html class="dark" lang="it">
+<html class="titanium-forced-dark dark" lang="it">
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark only">
     <meta name="theme-color" content="#0a0f1e">
-    <title>Imposta Nuova Password</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&amp;family=Noto+Sans:wght@400;500;600;700&amp;display=swap"
+    <title>Nuova Chiave d'Accesso - Protocollo Titanium</title>
+
+    <!-- Fonts & Icons -->
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
         rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
-    <script src="assets/js/tailwind-config.js"></script>
+
+    <!-- Design System -->
+    <link rel="stylesheet" href="assets/css/titanium.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    body {
-    min-height: 100dvh;
-    background-color: #0a0f1e;
-    }
 </head>
 
-<body class="bg-[#0a0f1e] text-white font-display antialiased">
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col max-w-md mx-auto bg-[#0a0f1e] shadow-2xl overflow-hidden">
+<body class="titanium-bg antialiased">
+    <div class="titanium-box">
 
-        <!-- Header (Fixed Glass) -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full max-w-md bg-[#0a0f1e]/20 backdrop-blur-sm border-b border-white/5 z-50 transition-colors">
-            <div class="flex items-center px-4 h-16">
-                <button onclick="history.back()"
-                    class="flex size-10 items-center justify-center rounded-full hover:bg-white/5 transition-colors text-white">
-                    <span class="material-symbols-outlined" style="font-size: 20px;">arrow_back</span>
-                </button>
-                <h2 class="text-white text-lg font-bold leading-tight flex-1 text-center pr-10">
-                    Nuova Password
-                </h2>
-            </div>
-        </header>
+        <!-- EF-[#3] FARO ANIMATO -->
+        <div class="glass-glow"></div>
 
-        <!-- Header Spacer -->
-        <div class="h-16 w-full shrink-0"></div>
+        <!-- HEADER PLACEHOLDER -->
+        <div id="header-placeholder"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
-            <!-- Main Content -->
-            <main class="flex-1 px-5 pb-8 flex flex-col items-center w-full max-w-md mx-auto">
-                <!-- Hero Illustration -->
-                <div
-                    class="mb-6 mt-2 flex h-24 w-24 items-center justify-center rounded-3xl bg-primary/10 dark:bg-primary/20 p-4 shadow-[0_8px_30px_rgb(0,0,0,0.04)] dark:shadow-none">
-                    <span class="material-symbols-outlined text-primary" style="font-size: 48px;">lock_reset</span>
-                </div>
-                <!-- Headings -->
-                <h1 class="mb-2 text-center text-2xl font-bold tracking-tight text-white">Imposta Nuova
-                    Password</h1>
-                <p class="mb-8 text-center text-base font-normal leading-relaxed text-slate-400">
-                    Inserisci la tua nuova password qui sotto per accedere nuovamente al tuo account in sicurezza.
-                </p>
+        <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
 
-                <!-- Form Fields -->
-                <form id="update-password-form" class="w-full space-y-6">
-                    <!-- New Password Field -->
-                    <div class="flex flex-col gap-2">
-                        <label class="text-base font-medium leading-normal text-white">Nuova
-                            Password</label>
+            <!-- EF-[#18] SAETTA MASTER -->
+            <div class="saetta-master"></div>
+
+            <!-- New Password Card -->
+            <div
+                class="w-full max-w-md bg-[#0a0f1e]/70 backdrop-blur-2xl rounded-[24px] border-glow overflow-hidden group hover:-translate-y-1 transition-all duration-300 shadow-2xl relative z-40">
+                <div class="saetta"></div>
+
+                <div class="px-8 pt-10 pb-10 relative z-10">
+                    <!-- Icon Section -->
+                    <div class="flex justify-center mb-8">
                         <div
-                            class="group flex w-full items-stretch rounded-xl border border-white/10 bg-[#0a0f1e]/50 transition-all focus-within:border-primary focus-within:ring-4 focus-within:ring-primary/20">
-                            <input id="new-password"
-                                class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-white placeholder-slate-500 focus:outline-none border-none focus:ring-0 rounded-l-xl"
-                                placeholder="••••••••" type="password" required />
-                            <button type="button"
-                                class="toggle-password flex items-center justify-center px-4 text-slate-400 hover:text-primary transition-colors focus:outline-none rounded-r-xl">
-                                <span class="material-symbols-outlined" style="font-size: 24px;">visibility</span>
-                            </button>
+                            class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
+                            <div class="saetta opacity-40"></div>
+                            <span
+                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
                     </div>
 
-                    <!-- Password Requirements Checklist (Visual only) -->
-                    <div class="rounded-xl bg-[#1e293b] p-4 border border-white/5">
-                        <div class="space-y-3">
-                            <label class="flex cursor-pointer items-center gap-x-3">
-                                <input checked=""
-                                    class="h-5 w-5 rounded border-white/10 border-2 bg-transparent text-primary checked:bg-primary checked:border-primary focus:ring-0 focus:ring-offset-0 focus:outline-none transition-all"
-                                    onclick="return false;" type="checkbox" />
-                                <p class="text-sm font-medium text-gray-300">Minimo 6 caratteri</p>
-                            </label>
+                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display">Nuova
+                        Password</h1>
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
+                        Protocollo Titanium</p>
+
+                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
+                    <div class="mb-8 p-4 bg-white/5 rounded-2xl border border-white/5 no-select">
+                        <div class="flex items-center gap-2 mb-2">
+                            <span class="material-symbols-outlined text-blue-400 text-sm">security</span>
+                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Protocollo 12-3-3
+                            </h4>
                         </div>
+                        <ul class="text-[11px] text-white/40 space-y-1 list-none italic leading-relaxed">
+                            <li class="flex items-center gap-2"><span
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Minimo 12 caratteri totali</li>
+                            <li class="flex items-center gap-2"><span
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Lettere Maiuscole</li>
+                            <li class="flex items-center gap-2"><span
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Simboli Speciali</li>
+                        </ul>
                     </div>
 
-                    <!-- Confirm Password Field -->
-                    <div class="flex flex-col gap-2">
-                        <label class="text-base font-medium leading-normal text-white">Conferma Nuova
-                            Password</label>
-                        <div
-                            class="group flex w-full items-stretch rounded-xl border border-white/10 bg-[#0a0f1e]/50 transition-all focus-within:border-primary focus-within:ring-4 focus-within:ring-primary/20">
-                            <input id="confirm-password"
-                                class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-white placeholder-slate-500 focus:outline-none border-none focus:ring-0 rounded-l-xl"
-                                placeholder="••••••••" type="password" required />
-                            <button type="button"
-                                class="toggle-password flex items-center justify-center px-4 text-slate-400 hover:text-primary transition-colors focus:outline-none rounded-r-xl">
-                                <span class="material-symbols-outlined" style="font-size: 24px;">visibility</span>
-                            </button>
+                    <form id="update-password-form" class="space-y-6">
+                        <!-- New Password -->
+                        <div class="space-y-2">
+                            <label
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Nuova
+                                Password</label>
+                            <div class="relative group/input">
+                                <input id="new-password" type="password" placeholder="••••••••••••" required
+                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                <button type="button"
+                                    class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
+                                    <span
+                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                </button>
+                            </div>
                         </div>
-                    </div>
 
-                    <!-- Submit Button -->
-                    <div class="pt-4">
+                        <!-- Confirm Password -->
+                        <div class="space-y-2">
+                            <label
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Conferma
+                                Password</label>
+                            <div class="relative group/input">
+                                <input id="confirm-password" type="password" placeholder="••••••••••••" required
+                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                <button type="button"
+                                    class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
+                                    <span
+                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- Action Button -->
                         <button type="submit"
-                            class="w-full rounded-xl bg-primary py-4 text-center text-base font-bold text-white shadow-lg shadow-blue-500/30 hover:bg-blue-600 hover:shadow-blue-500/50 active:scale-[0.98] transition-all focus:outline-none focus:ring-4 focus:ring-primary/30">
-                            Imposta Password
+                            class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
+                            <div class="relative z-10 flex items-center justify-center gap-2">
+                                <span class="tracking-widest uppercase text-xs">Salva nuova password</span>
+                                <span class="material-symbols-outlined text-sm">verified_user</span>
+                            </div>
                         </button>
-                    </div>
-                </form>
-            </main>
+                    </form>
 
+                    <!-- Footer Link -->
+                    <div class="mt-8 text-center border-t border-white/5 pt-6">
+                        <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
+                            Problemi con il ripristino?
+                            <a href="reset_password.html"
+                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold">Reinvia
+                                email con link</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </main>
 
-        <!-- Footer / Helper -->
-        <div class="p-4 text-center mb-2">
-            <p class="text-sm text-slate-500">
-                Ti sei ricordato la password?
-                <a class="font-semibold text-primary hover:text-blue-600 hover:underline" href="index.html">Torna al
-                    Login</a>
-            </p>
-        </div>
+        <!-- FOOTER PLACEHOLDER -->
+        <div id="footer-placeholder"></div>
+    </div>
 
-        <!-- Bottom Glass Frame (Fixed) -->
-        <div
-            class="fixed bottom-0 left-0 right-0 max-w-md mx-auto h-16 pointer-events-none z-50 backdrop-blur-sm border-t transition-colors bg-[#0a0f1e]/20 border-white/5">
-        </div>
-
-        <div id="notification-banner" class="hidden fixed top-4 right-4 p-4 rounded-lg text-white z-50"></div>
-
-        <script src="/Frontend/public/assets/js/main.js"></script>
-        <script type="module" src="/Frontend/public/assets/js/utils.js"></script>
-        <script type="module">
-            import { updatePassword, checkAuthState } from '/Frontend/public/assets/js/auth.js';
-            import { showNotification } from '/Frontend/public/assets/js/utils.js';
-
-            // checkAuthState(); // Redirect if user is already logged in - DISABLED for password reset flow
-
-            const updatePasswordForm = document.getElementById('update-password-form');
-            updatePasswordForm.addEventListener('submit', async (event) => {
-                event.preventDefault();
-
-                const email = sessionStorage.getItem('emailForPasswordReset');
-                if (!email) {
-                    showNotification("Nessuna email trovata per il reset. Ricomincia la procedura.", "error");
-                    setTimeout(() => window.location.href = 'reset_password.html', 2000);
-                    return;
-                }
-
-                const newPassword = document.getElementById('new-password').value;
-                const confirmPassword = document.getElementById('confirm-password').value;
-
-                if (newPassword.length < 6) {
-                    showNotification("La password deve avere almeno 6 caratteri.", "error");
-                    return;
-                }
-
-                if (newPassword !== confirmPassword) {
-                    showNotification("Le password non coincidono.", "error");
-                    return;
-                }
-
-                await updatePassword(email, newPassword);
-            });
-        </script>
+    <!-- Scripts -->
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/imposta_nuova_password.js"></script>
 </body>
 
 </html>
