--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -93,6 +93,11 @@
                                         class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
                                 </button>
                             </div>
+                            <div class="flex justify-end px-1 pt-1">
+                                <a href="reset_password.html"
+                                    class="text-[10px] font-bold text-white/50 hover:text-blue-400 uppercase tracking-widest transition-colors">Password
+                                    dimenticata?</a>
+                            </div>
                         </div>
 
                         <button type="submit" data-login-submit
@@ -115,6 +120,13 @@
 
         <!-- 5. FOOTER PLACEHOLDER -->
         <div id="footer-placeholder"></div>
+
+        <!-- Standard Titanium Toast Container -->
+        <div id="toast-container"
+            class="fixed bottom-8 left-1/2 -translate-x-1/2 z-[300] flex items-center gap-3 px-6 py-4 bg-[#0a0f1e]/90 backdrop-blur-xl border border-white/10 rounded-2xl shadow-2xl opacity-0 translate-y-10 transition-all duration-500 pointer-events-none">
+            <span id="toast-icon" class="material-symbols-outlined"></span>
+            <span id="toast-message" class="text-xs font-bold uppercase tracking-widest text-white"></span>
+        </div>
     </div>
 
     <!-- Scripts -->
