--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,120 +1,108 @@
 <!DOCTYPE html>
-
-<html class="dark" lang="it">
+<html class="titanium-forced-dark dark" lang="it">
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark only">
     <meta name="theme-color" content="#0a0f1e">
-    <title>Reset Password</title>
-    <!-- Tailwind CSS -->
-    <script src="assets/js/tailwind-config.js"></script>
+    <title>Recupero Credenziali - Protocollo Titanium</title>
+
+    <!-- Fonts & Icons -->
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+
+    <!-- Design System -->
+    <link rel="stylesheet" href="assets/css/titanium.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <!-- Fonts: Inter & Material Symbols -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&amp;display=swap"
-        rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
-    <!-- Theme Config -->
-    <script src="assets/js/theme.js"></script>
 </head>
 
-<body class="bg-[#0a0f1e] text-white font-display antialiased">
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col max-w-md mx-auto bg-[#0a0f1e] shadow-2xl overflow-hidden">
+<body class="titanium-bg antialiased">
+    <div class="titanium-box">
 
-        <!-- Header (Fixed Glass) -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full max-w-md bg-[#0a0f1e]/20 backdrop-blur-sm border-b border-white/5 z-50 transition-colors">
-            <div class="flex items-center px-4 h-16">
-                <a href="index.html"
-                    class="flex size-10 items-center justify-center rounded-full hover:bg-white/5 transition-colors text-white">
-                    <span class="material-symbols-outlined text-[24px]">arrow_back</span>
-                </a>
-                <h2 class="text-white text-lg font-bold leading-tight flex-1 text-center pr-10">
-                    Reset Password
-                </h2>
-            </div>
-        </header>
+        <!-- EF-[#3] FARO ANIMATO -->
+        <div class="glass-glow"></div>
 
-        <!-- Header Spacer -->
-        <div class="h-16 w-full shrink-0"></div>
+        <!-- HEADER PLACEHOLDER -->
+        <div id="header-placeholder"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
-            <!-- Hero Illustration / Visual -->
-            <div class="flex flex-col items-center justify-center pt-8 pb-8">
-                <div class="relative flex items-center justify-center size-24 rounded-full bg-primary/10 mb-6">
-                    <!-- Abstract Lock Visual -->
-                    <div
-                        class="absolute inset-0 rounded-full bg-gradient-to-tr from-blue-100 to-blue-50   opacity-50 blur-xl">
-                    </div>
-                    <span class="material-symbols-outlined text-[48px] text-primary relative z-10">lock_reset</span>
-                </div>
-            </div>
-            <!-- Headline Text -->
-            <h1 class="text-white text-[28px] font-bold leading-tight text-center mb-3">
-                Password Dimenticata?
-            </h1>
-            <!-- Body Text -->
-            <p class="text-slate-400 text-base font-normal leading-relaxed text-center mb-8 px-2">
-                Non preoccuparti! Inserisci la tua email e ti invieremo le istruzioni per ripristinare il tuo account in
-                sicurezza.
-            </p>
-            <!-- Form -->
-            <form id="reset-form" class="flex flex-col gap-6">
-                <!-- Text Field -->
-                <div class="flex flex-col gap-2">
-                    <label class="text-white text-sm font-medium leading-normal ml-1" for="email">Email</label>
-                    <div class="relative">
+        <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
+
+            <!-- EF-[#18] SAETTA MASTER -->
+            <div class="saetta-master"></div>
+
+            <!-- Reset Card -->
+            <div
+                class="w-full max-w-md bg-[#0a0f1e]/70 backdrop-blur-2xl rounded-[24px] border-glow overflow-hidden group hover:-translate-y-1 transition-all duration-300 shadow-2xl relative z-40">
+                <div class="saetta"></div>
+
+                <div class="px-8 pt-10 pb-10 relative z-10">
+                    <!-- Icon Section -->
+                    <div class="flex justify-center mb-8">
                         <div
-                            class="absolute inset-y-0 left-0 flex items-center pl-4 pointer-events-none text-slate-400">
-                            <span class="material-symbols-outlined text-[20px]">mail</span>
+                            class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
+                            <div class="saetta opacity-40"></div>
+                            <span
+                                class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
-                        <input
-                            class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white bg-[#0a0f1e]/50 border border-white/10 focus:border-primary focus:ring-2 focus:ring-primary/20 h-14 placeholder:text-slate-500 pl-11 pr-4 text-base font-normal leading-normal transition-all duration-200"
-                            id="email" placeholder="esempio@dominio.com" required="" type="email" value="" />
+                    </div>
+
+                    <h1 class="text-3xl font-extrabold text-white text-center mb-1 select-none font-display">Recupero
+                    </h1>
+                    <p class="text-xs text-white/40 text-center mb-6 uppercase tracking-widest select-none font-bold">
+                        Protocollo Titanium</p>
+
+                    <!-- REGOLA 5 - AIUTO BASE INFORMATIVA -->
+                    <p data-ui="hint" class="mb-10 text-center">
+                        Inserisci l'indirizzo email associato al tuo account. Ti invieremo un collegamento sicuro per
+                        impostare una nuova chiave d'accesso.
+                    </p>
+
+                    <form id="reset-form" class="space-y-8">
+                        <!-- Email Input -->
+                        <div class="space-y-2">
+                            <label
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Indirizzo
+                                Email</label>
+                            <input id="email" type="email" placeholder="nome@esempio.com" required
+                                class="w-full h-14 px-5 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                        </div>
+
+                        <!-- Action Button -->
+                        <button type="submit"
+                            class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
+                            <div class="relative z-10 flex items-center justify-center gap-2">
+                                <span class="tracking-widest uppercase text-xs">Invia email istruzioni</span>
+                                <span class="material-symbols-outlined text-sm">send</span>
+                            </div>
+                        </button>
+                    </form>
+
+                    <!-- Footer Link -->
+                    <div class="mt-8 text-center border-t border-white/5 pt-6">
+                        <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest select-none">
+                            Hai ricordato la password?
+                            <a href="index.html"
+                                class="text-blue-400 hover:text-white transition-colors ml-1 font-extrabold">Torna
+                                all'accesso</a>
+                        </p>
                     </div>
                 </div>
-                <!-- Spacer -->
-                <div class="h-2"></div>
-                <!-- Single Button -->
-                <button
-                    class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-xl h-14 px-5 bg-primary hover:bg-blue-600 active:scale-[0.98] text-white text-base font-bold leading-normal tracking-[0.015em] transition-all duration-200 shadow-lg shadow-blue-500/20">
-                    <span class="truncate">Invia richiesta</span>
-                </button>
-            </form>
-            <!-- Link to Login -->
-            <div class="mt-8 text-center">
-                <p class="text-slate-400 text-sm">
-                    Ricordi la password?
-                    <a class="font-semibold text-primary hover:underline transition-colors ml-1"
-                        href="index.html">Accedi</a>
-                </p>
             </div>
         </main>
 
-        <!-- Bottom Glass Frame (Fixed) -->
-        <div
-            class="fixed bottom-0 left-0 right-0 max-w-md mx-auto h-16 pointer-events-none z-50 backdrop-blur-sm border-t transition-colors bg-[#0a0f1e]/20 border-white/5">
-        </div>
+        <!-- FOOTER PLACEHOLDER -->
+        <div id="footer-placeholder"></div>
     </div>
-    <div id="notification-banner" class="hidden fixed top-4 right-4 p-4 rounded-lg text-white z-50"></div>
-    <script src="assets/js/main.js"></script>
-    <script type="module">
-        import { resetPassword } from './assets/js/auth.js';
 
-        const resetForm = document.getElementById('reset-form');
-        resetForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const email = document.getElementById('email').value;
-            await resetPassword(email);
-        });
-    </script>
+    <!-- Scripts -->
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/reset_password.js"></script>
 </body>
 
 </html>
